--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "aws-sdk": "^2.799.0"
+        "aws-sdk": "^2.799.0",
+        "fast-csv": "^4.3.6"
     },
     "devDependencies": {
         "jest": "^26.6.3"
